--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
             constructor(head= null){
                 this.head= head
             }
-            append(value){}
-            prepend(value){}
+            append(value){
+                let node= new Node(value);
+                let curr;
+                if(this.head===null){
+                    this.head= node;
+                }else{
+                    curr= this.head;
+                    while(curr.next){
+                        curr= curr.next;
+                    }
+                    curr.next= node;
+                }
+            }
+
+            prepend(value){
+                let node= new Node(value);
+                if(this.head===null){
+                    this.head= node;
+                }else{
+                    node.next= this.head;
+                    this.head= node;
+                }
+            }
 
             size(){
                 let count=0; //start off at zero
@@ -61,12 +82,84 @@
                 };
             }
 
-            pop(){}
+            pop(){
+                if(this.head===null){
+                    return;
+                }else if(mainList.size()===1){
+                    mainList.clear();
+                }else{
+                    let element= this.head;
+                    let counter= 1;
+                    if(element){
+                        while(counter < mainList.size()-1){
+                            element= element.next;
+                            counter++;
+                        }
+                        element.next= null;
+                    }
+                }
+            }
+
             contains(value){}
+
             find(value){}
-            toString(){}
-            insertAt(value, index){}
-            removeAt(index){}
+
+            toString(){
+                let curr= this.head;
+                let string= "";
+                while(curr){
+                    string+= curr.aValue+ ".\n";
+                    curr= curr.next;
+                }
+                return string;
+            }
+
+            insertAt(value, index){
+                if(index < 0 || index > mainList.size()){
+                    return "Please enter a valid index.";
+                }else{
+                    let node= new Node(value);
+                    let curr;
+                    let prev;
+                    curr= this.head;
+                    if(index===0){
+                        node.next=this.head;
+                        this.head=node;
+                    }else{
+                        curr= this.head;
+                        let it=0;
+                        while(it<index){
+                            it++;
+                            prev=curr;
+                            curr=curr.next;
+                        }
+                        node.next= curr;
+                        prev.next= node
+                    }
+                }
+            };
+
+            removeAt(index){
+                if(index < 0 || index >= mainList.size()){
+                    return "Please enter a valid index.";
+                }else{
+                    let curr;
+                    let prev;
+                    curr= this.head;
+                    prev=curr;
+                    if(index===0){
+                        this.head=curr.next;
+                    }else{
+                        let it=0;
+                        while(it<index){
+                            it++;
+                            prev=curr;
+                            curr=curr.next;
+                        }
+                        prev.next= curr.next
+                    }
+                }
+            }
 
             clear(){
                 this.head= null;
@@ -75,7 +168,7 @@
         //create 1 class for node creation
         class Node{
             constructor (value= null){
-                this.value= value
+                this.aValue= value
                 this.next= null
             }
         }
@@ -83,17 +176,26 @@
         //node creation example
         let node1= new Node("First node");
         let node2= new Node("Second node");
+        let node3= new Node("Third node");
         //next creation example
         node1.next= node2;
+        node2.next= node3;
         //list creation example
         let mainList= new LinkedList(node1);
 
-        console.log(mainList.at(0));
+        console.log(mainList.insertAt("Inserted Node", 1));
+        console.log(mainList.append("Appended Node"));
+        console.log(mainList.prepend("Prepended Node"));
+        
+        console.log(mainList.toString());
+        console.log(mainList.size());
+        // console.log(mainList.at(0));
+
         //mainList.at(1) = returns the node at index 1
         //mainList.firstNode() = returns the first node
         //mainList.tail() = returns last node
         //mainList.clear() = clears out list
-        //console.log(mainList.size()); = total list size
+        //mainList.size() = total list size
         
     </script>
 </body>
